@@ -1,5 +1,5 @@
 '\" t
-.TH VNSTAT 1 "FEBRUARY 2025" "version 2.13" "User Manuals"
+.TH VNSTAT 1 "MAY 2025" "version 2.14" "User Manuals"
 .SH NAME
 vnstat \- a console-based network traffic monitor
 
@@ -272,7 +272,7 @@ is set to 2 then only the interface count will be shown as a single number. See 
 
 .TP
 .B "-D, --debug"
-Show additional debug output.
+Show additional debug output. Can be used multiple times for increased verbosity up to a maximum of 2.
 
 .TP
 .BI "-e, --end " date
