@@ -1,5 +1,5 @@
 '\" t
-.TH VNSTATD 8 "FEBRUARY 2025" "version 2.13" "User Manuals"
+.TH VNSTATD 8 "MAY 2025" "version 2.14" "User Manuals"
 .SH NAME
 vnstatd \- daemon based database updating for vnStat
 
@@ -116,8 +116,8 @@ Fork process to background and run as a daemon.
 
 .TP
 .B "-D, --debug"
-Provide additional output for debug purposes. The process will stay
-attached to the terminal for output.
+Show additional debug output. Can be used multiple times for increased verbosity up to a maximum of 2.
+The process will stay attached to the terminal for output.
 
 .TP
 .BI "-g, --group " group
