@@ -1,4 +1,4 @@
-.TH VNSTATI 1 "FEBRUARY 2025" "version 2.13" "User Manuals"
+.TH VNSTATI 1 "MAY 2025" "version 2.14" "User Manuals"
 .SH NAME
 vnstati \- image output support for vnStat
 
@@ -200,7 +200,7 @@ is set to 2 then only the interface count will be shown as a single number. See 
 
 .TP
 .B "-D, --debug"
-Show additional debug output.
+Show additional debug output. Can be used multiple times for increased verbosity up to a maximum of 2.
 
 .TP
 .BI "-e, --end " date
